# PAModelpy

./: .gitignore  .readthedocs.yaml  404.html  =  CITATION.cff  LICENSE  README.md  environment.yml  example.html  index.html  lunr-index-1722337345863.json  lunr-index.json  memprot_dataset_4.xlsx  pydoc-markdown.yml  requirements.txt  requirements_PAModelpy.txt  search-doc-1722337345863.json  search-doc.json  setup.py  sitemap.xml
Data/: .~lock.proteinAllocationModel_iML1515_EnzymaticData_py.xls#  24_04_16_UP000000625_Ecoli_K12.fasta  E_coli_proteomics_data.xlsx  eGFP_protein_sequence.txt  enzyme_sets.json  mcPAM_iML1515_EnzymaticData.xlsx  mcPAM_iML1515_EnzymaticData_250627.xlsx  mcPAM_iML1515_EnzymaticData_250627_TE_UE_modified.xlsx  proteinAllocationModel_iML1515_EnzymaticData_230503.xls  proteinAllocationModel_iML1515_EnzymaticData_241209.xlsx  proteinAllocationModel_iML1515_EnzymaticData_241209_core.xlsx  proteinAllocationModel_iML1515_EnzymaticData_py.xls  proteinAllocationModel_iML1515_EnzymaticData_py_uniprot.xlsx  proteinAllocationModel_mc-core_EnzymaticData_241209_multi.xlsx  proteinAllocationModel_mciML1515_EnzymaticData_241209_multi.xlsx  proteome_data_extract_schmidt2016.xlsx  toy_model_cell_membrane_localization.json
Examples/: PAModel_example_script.ipynb  mcpam_generator.py  mcpam_generator_using_diagnostics_files.py  mcpam_generator_using_enzymatic_files.py  toy_model_generator.py
Figures/: Figure1_toy_ec_pam.py  Figure1_toy_ec_pam_overflow.py  Figure2_sensitivities_gecko_pam.ipynb  Figure3_sensitivities_protein-overproduction.ipynb  SuppFigure1_FAC-distributions.ipynb  SuppFigure1_VSC-distributions.ipynb  SuppFigure3_proteomap_file_generation.py
MATLAB/: toyModel_paper.m
MCA_revised/: test1.mat  test1_fba_only.m  test2_fba_enz_only.m  test3_full_pam.m  test4_full_pam.m  test5_full_pam.m
Models/: iML1515 (1).json:Zone.Identifier  toy_model.json
PAModelpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PAMpy/: README.md
PAMpy/src/: README.md  configuration.py  pyproject.toml
PAMpy/src/PAModelpy/: CatalyticEvent.py  Enzyme.py  EnzymeSectors.py  PAMValidator.py  PAModel.py  __init__.py
Results/: anaerobic_csources_pam.xlsx  anaerobic_csources_pam_coglyc.xlsx  fva_transcripts.xlsx  fva_transcripts_higher_ub.xlsx  memprot_area_core.xlsx  protein_costs_glycolysis_tca.xlsx  sensitivity_coefficient_proteomap_ecoli_vs10.tsv  toy-core-full_model_ESC.xlsx  toy-core-full_model_VSC.xlsx  toy-core-full_model_performance_esc.xlsx  toy-core-full_model_performance_fac.xls  toy-core-full_model_performance_vsc.xlsx
Scripts/: FVA_ecolicore_data_analysis.ipynb  Translation_parameters_estimation.ipynb  anaerobic_csources.py  analyze_proteome.ipynb  compare_computational_efficiency_esc_replicates.py  compare_computational_efficiency_fac.py  compare_computational_efficiency_vsc.py  compare_computational_efficiency_vsc_replicates.py  create_ecolicore_pam.py  create_ecolicore_pam_incl_UE.ipynb  (+30 more)
src/: Protein.py  README.md  __init__.py  pyproject.toml
src/PAModelpy/: CatalyticEvent.py  Constraints.py  Enzyme.py  EnzymeSectors.py  MembraneSector.py  PAMValidator.py  PAModel.py  __init__.py  configuration.py
src/PAModelpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/PAModelpy/flux_analysis/: __init__.py  flux_variability_analysis.py  recombinant_protein_expression.py
src/PAModelpy/utils/: __init__.py  pam_generation.py  recombinant_protein_expression.py  visualize_protein_sectors.py
src/TAModelpy/: TAModel.py  Transcript.py  __init__.py  mRNASectors.py
src/flux_analysis/: flux_variability_analysis.py  recombinant_protein_expression.py
src/utils/: pam_generation.py
(+276 files in other folders)
