[build-system]
requires = [
    "setuptools>=68"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project]
name = 'PAModelpy'
version = '0.0.3.15'
authors = [{name='Samira van den Bogaard', email = 'samira.vandenbogaard@rwth-aachen.de'}]
description = 'Python framework for building and analysing protein allocation models'
readme = 'README.md'
requires-python = '>=3.8'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
    ]

dependencies = [
    'cobra==0.29.0',
    'openpyxl==3.1.0',
    'pandas==1.5.3',
    'python-libsbml==5.19.7',
    'regex==2022.10.31',
    'requests==2.28.2',
    'tabulate==0.9.0',
    'xlrd==2.0.1',
    'xlwt==1.3.0'
]