[build-system]
requires = [
    "setuptools>=68"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # default: scans from the project root (same directory as pyproject.toml)

[project]
name = 'PAModelpy'
version = '0.0.4.8'
authors = [{name='Samira van den Bogaard', email = 'samira.vandenbogaard@rwth-aachen.de'}]
description = 'Python framework for building and analysing protein allocation models'
readme = 'README.md'
requires-python = '>=3.9, <3.12'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent'
    ]

dependencies = [
    'cobra==0.29.0',
    'openpyxl~=3.1',
    'pandas==1.*',
    'python-libsbml~=5.19',
    'regex==2022.*',
    'requests==2.*',
    'tabulate~=0.9',
    'xlrd==2.*',
    'xlwt~=1.3',
    'pytest~=8.3'
]
